# mem-quant

./: LICENSE  README.md  setup.cfg
mem_quant/: ilastik_test.py  main.py  memQuant.py  napari.yaml  subwidgets.py  test_launcher.py  ui.py
mem_quant/Models/: GFP-mCherry-GFP.ilp  GFP-mCherry-mCherry.ilp  membrane_Cy5_v1.ilp  membrane_GFP_v1.ilp  membrane_model.ilp
