[metadata]
name = mem-quant
version = 0.0.1
author = Ajit Joglekar
lisence = MIT

classifiers =
    Framework :: napari
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
python_requires  = >= 3.8
install_requires =
    ilastik-core
    napari
    # nd2
    # pyqt

[options.entry_points]
napari.manifest =
    mem-quant = mem_quant:napari.yaml

[options.package_data]
* = *.yaml
mem_quant = Models/*.ilp
